# otari

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: sync-upstream.yml
docs/: platform-protocol.md
docs/public/: openapi.json
infra/sandbox-image/: Dockerfile  README.md
infra/sandbox-image/sandbox/: runner_pool.py  sessions.py
infra/sandbox-image/tests/: test_programmatic_e2e.py  test_sessions.py
src/gateway/: streaming.py
src/gateway/api/: deps.py  main.py
src/gateway/api/routes/: audio.py  chat.py
src/gateway/core/: config.py
src/gateway/models/: mcp.py
src/gateway/services/: mcp_client.py  mcp_loop.py  sandbox_backend.py  url_safety.py
tests/integration/: test_audio_endpoint.py  test_platform_mode_chat.py
tests/unit/: test_deps_as_utc.py  test_mcp_loop.py  test_sandbox_backend.py  test_url_safety.py
